v4.6.0 (November 2022)
  - Kit Import: allow import of kit with no templates
  - Notes: remove category selection from form UI.
  - Rubocop: lint changed files since previous commit
  - Upgraded gems:
    - nokogiri
  - New integrations:
    - Core Impact
    - Veracode

v4.5.0 (August 2022)
  - Upgraded Dradis to run on ruby 3.1.2
  - Upgraded gems: acts_as_tree, bootsnap, bundler-audit, factory_bot, paper_trail, rails, rails-html-sanitizer, timecop, thor, unicorn
  - Bugs fixes:
    - Attachments: Fix attachments not showing or being validated correctly
    - Evidence:
      - Add validation for creating evidences in the issue view
      - Set correct localStorage key to prevent pre-populating incorrect content at the issue level
    - Nodes: Prevent evidence labels linking to external resources
  - New integrations:
    - CSV Importer
  - Integration enhancements:
    - Qualys: Wrap ciphers in code blocks for the Vuln Importer
  - Reporting enhancements:
    - CSV Export: Rename integration to dradis-csv_export
    - HTML Export: Add :rtp plugins feature
  - Security Fixes:
    - Medium: Authenticated author broken access control: read access to issue content

v4.4.0 (June 2022)
  - Login View: Design update
  - Tylium:
    - Improve mobile experience
    - Show the resource title in the header when viewing a resource
  - Upgraded gems:
    - nokogiri, rack, sinatra
  - Bugs fixes:
    - Cards: Prevent adding 'card' class to card comments
  - Integration enhancements:
    - Nikto: Make references available as an issue field

v4.3.0 (April 2022)
  - Setup Wizard: Add option to pre-populate sample data
  - Uploads: Allow subsequent file uploads from the same scanner without needing to re-select the scanner
  - Upgraded gems: nokogiri, puma, rails
  - Bugs fixes:
    - Editor:
      - Add keyboard shortcut support for windows and linux
      - Allow text selection expansion using shift-click