@@ -7,11 +7,10 @@
   } do %>
   <%= div_for comment, data: { author_id: comment.user_id } do %>
     <div class="body">
-      <%= avatar_image(comment.user, size: 35) %>
-
-      <div>
-        <div class="row">
-          <div class="col-12 p-0">
+      <div class="d-flex">
+        <%= avatar_image(comment.user, size: 35) %>
+        <div class="w-100">
+          <div class="d-flex justify-content-between">
             <span class="user">
               <% if comment.user %>
                 <%= comment.user.name %>
@@ -19,9 +18,7 @@
                 Missing User
               <% end %>
             </span>
-
-
-            <div class="actions pull-right">
+            <div class="actions">
               <%= link_to main_app.edit_comment_path(comment), remote: true, data: { action: 'edit' } do %>
                 <i class="fa fa-pencil"></i> Edit
               <% end %>
@@ -34,16 +31,11 @@
               <% end %>
             </div>
           </div>
-        </div>
-
-        <div class="row">
           <span class="time">
             <%= link_to local_time_ago(comment.created_at), "##{dom_id(comment)}", data: { turbolinks: false } %>
           </span>
         </div>
-
       </div>
-
       <div class="content content-textile" data-behavior="content-textile">
         <%= comment_formatter(comment.content) %>
       </div>
